# Agents-With-Intent

./: .gitignore  README.md  pyproject.toml  setup.py
agents_with_intent/: __init__.py  agent.py  standard_tools.py
agents_with_intent/graph/: __init__.py  builder.py  nodes.py  skill_directives.py  state.py  supervisor.py
agents_with_intent/skills/: __init__.py  core_tools.py  discovery.py  loader.py  parser.py  registry.py  tools.py
tests/: test_agent_flow.py  test_agent_skills_discovery.py  test_registry.py  test_script_tools.py  test_security.py  test_supervisor_flow.py
